--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@types/styled-components": "^5.1.34",
-    "framer-motion": "^12.4.11",
+    "framer-motion": "^12.5.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "matter-js": "^0.20.0",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
