--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "portfolio2025",
+  "homepage": "https://andrezmazo.github.io/portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
